# cs2d_vscode

./: .appveyor.yml  .appveyor[outdated].yml  .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  .travis[outdated].yml  CMakeLists.txt  LICENSE  Makefile  README.md  configure  github_deploy_key.enc  premake5.lua  premake5[OUTDATED].lua  super_secret.txt.enc  travis.yml  vcpkg.json
.github/workflows/: CMake.yml  build.yml  cmake.yml
cmake/: FindGLFW3.cmake
include/: glad.c
include/glad/: glad.h
include/rapidxml-1.13/: rapidxml_print.hpp
include/stb_image/: stb_image.h
resources/content/: gameparameters.txt  weapons.json
resources/levels/: aasdasd.xml  bruh.xml  bubaska.xml  coltest.xml  eeee.xml  gaycum.xml  hadiyav.xml  ka.xml  okk.xml  one.txt  one.xml  tmm.xml  zazaza.xml
resources/shaders/: batchFragment.txt  batchVertex.txt  outlineFragment.txt  outlineVertex.txt  spriteFragment.txt  spriteVertex.txt  squareFragment.txt  squareVertex.txt
src/: Common.h  Common.hpp  Game.cpp  Game.h  Game.hpp  Window.hpp  log.txt  main.cpp
src/CS2D/: Game.cpp  Game.hpp
src/CS2D/Model/: Mag.cpp  Mag.hpp  Map.cpp  Map.hpp  Player.cpp  Player.hpp  Scene.cpp  Scene.hpp  Tile.cpp  Tile.hpp  TileButton.cpp  TileButton.hpp  Weapon.cpp  Weapon.hpp
src/CS2D/Other/: GameParameters.cpp  GameParameters.hpp  Game_Parameters.cpp  SceneManager.cpp  SceneManager.hpp
src/CS2D/Renderer/: EditorMapRenderer.cpp  EditorMapRenderer.hpp  EmptyRect.cpp  EmptyRect.hpp
src/CS2D/Scene/: Menu.cpp  Menu.hpp  StartGame.cpp  StartGame.hpp
src/CS2D/Scene/Editor/: ButtonTile.hpp  Editor.cpp  Editor.hpp  NewMapSystem.cpp  NewMapSystem.hpp  SaveLoadSystem.cpp  SaveLoadSystem.hpp
src/CS2D/Scene/Editor/Entities/: Env_Item.cpp  Env_Item.hpp
src/Core/: Window.cpp  Window.hpp
src/Core/Collider/: CircleCollider.cpp  CircleCollider.hpp  Collider.cpp  Collider.hpp  RectangleCollider.cpp  RectangleCollider.hpp
src/Core/Loader/: JSONLoader.cpp  JSONLoader.hpp  XMLLoader.cpp  XMLLoader.hpp
src/Core/Manager/: InputManager.cpp  InputManager.hpp  Logger.cpp  Logger.hpp  ObjectManager.cpp  ObjectManager.hpp  ResourceManager.cpp  ResourceManager.hpp  Timer.cpp  Timer.hpp  Utils.cpp  Utils.hpp
src/Core/Manager/Input/: InputStructs.cpp  InputStructs.hpp
src/Core/Manager/MemoryOverride/: MemoryOverride.cpp  MemoryOverride.hpp
src/Core/Math/: Matrix4.cpp  Matrix4.h  Matrix4.hpp  Projection.cpp  Projection.h  Projection.hpp  Vector2.h  Vector2.hpp  Vector3.cpp  Vector3.h  Vector3.hpp
src/Core/Model/: Camera.cpp  Camera.hpp  GameObject.cpp  GameObject.hpp  Object.cpp  Object.hpp  Tile.cpp  Tile.hpp
src/Core/Renderer/: Circle.cpp  Circle.hpp  Outline.cpp  Outline.hpp  Shader.cpp  Shader.hpp  Sprite.cpp  Sprite.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  Square.cpp  Square.hpp  SquareRenderer.cpp  SquareRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp  Texture.cpp  Texture.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp
src/Core/UI/: Button.cpp  Button.hpp  Circle.hpp  Label.cpp  Label.hpp  ListItem.cpp  ListItem.hpp  Panel.cpp  Panel.hpp  RadioButton.cpp  RadioButton.hpp  SpriteButton.cpp  SpriteButton.hpp  TextBox.cpp  TextBox.hpp  TextButton.cpp  TextButton.hpp  UIObject.cpp  UIObject.hpp
src/Managers/: InputManager.cpp  InputManager.h  InputManager.hpp  ResourceManager.cpp  ResourceManager.h  ResourceManager.hpp
src/Managers/Input/: InputStructs.hpp
src/Models/: Camera.h  Camera.hpp  GameObject.cpp  GameObject.h  GameObject.hpp  Mag.cpp  Mag.h  Mag.hpp  Map.cpp  Map.h  Map.hpp  Player.cpp  Player.h  Player.hpp  Shader.cpp  Shader.h  Shader.hpp  Sprite.cpp  Sprite.h  Sprite.hpp  Texture.cpp  Texture.hpp  Tile.cpp  Tile.h  Tile.hpp  Weapon.cpp  Weapon.h  Weapon.hpp
src/Models/UI/: Button.cpp  Button.h  Button.hpp  Circle.cpp  Circle.hpp  Label.cpp  Label.h  Label.hpp  ListItem.cpp  ListItem.hpp  Outline.cpp  Outline.h  Outline.hpp  Panel.cpp  Panel.h  Panel.hpp  RadioButton.cpp  RadioButton.h  RadioButton.hpp  Square.cpp  Square.h  Square.hpp  TextBox.cpp  TextBox.h  TextBox.hpp  UIObject.cpp  UIObject.h  UIObject.hpp
src/Others/: Game_Parameters.cpp  Game_Parameters.h  Game_Parameters.hpp  Logger.cpp  Logger.h  Logger.hpp  Timer.cpp  Timer.hpp  Utils.cpp  Utils.h  Utils.hpp  gameparameters.txt
src/Renderers/: SpriteRenderer.cpp  SpriteRenderer.h  SpriteRenderer.hpp  SquareRenderer.cpp  SquareRenderer.h  SquareRenderer.hpp  TextRenderer.cpp  TextRenderer.h  TextRenderer.hpp
src/Scenes/: Editor.cpp  Editor.h  Menu.cpp  Menu.h  Menu.hpp  StartGame.cpp  StartGame.h  StartGame.hpp
src/Scenes/Editor/: ButtonTile.cpp  ButtonTile.h  ButtonTile.hpp  Editor.cpp  Editor.h  Editor.hpp  NewMapSystem.cpp  NewMapSystem.h  NewMapSystem.hpp  SaveLoadSystem.cpp  SaveLoadSystem.h  SaveLoadSystem.hpp
src/Scenes/Editor/Entities/: Env_Item.cpp  Env_Item.h  Env_Item.hpp
test/: Circle.hpp  Common.hpp  ResourceManager.hpp  Shader.hpp  Sprite.cpp  Sprite.hpp  SpriteRenderer.hpp  Square.cpp  Square.hpp  SquareRenderer.hpp  TextRenderer.hpp  config.json  main.cpp
test/CS2D/: Game.cpp  Game.hpp
test/CS2D/Scene/: TestScene.cpp  TestScene.hpp
test/Core/Renderer/: BatchRenderer.cpp  BatchRenderer.hpp  OutlineTest.cpp  OutlineTest.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.hpp
